update swagger specifications
