# swagger/models/resource_info.go
@@ -1,86 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"strconv"
-
-	strfmt "github.com/go-openapi/strfmt"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/swag"
-)
-
-// ResourceInfo resource info
-// swagger:model resourceInfo
-type ResourceInfo struct {
-
-	// id
-	ID string `json:"id,omitempty"`
-
-	// name
-	Name string `json:"name,omitempty"`
-
-	// query formats
-	QueryFormats []*QueryFormat `json:"queryFormats"`
-}
-
-// Validate validates this resource info
-func (m *ResourceInfo) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateQueryFormats(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *ResourceInfo) validateQueryFormats(formats strfmt.Registry) error {
-
-	if swag.IsZero(m.QueryFormats) { // not required
-		return nil
-	}
-
-	for i := 0; i < len(m.QueryFormats); i++ {
-		if swag.IsZero(m.QueryFormats[i]) { // not required
-			continue
-		}
-
-		if m.QueryFormats[i] != nil {
-			if err := m.QueryFormats[i].Validate(formats); err != nil {
-				if ve, ok := err.(*errors.Validation); ok {
-					return ve.ValidateName("queryFormats" + "." + strconv.Itoa(i))
-				}
-				return err
-			}
-		}
-
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *ResourceInfo) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *ResourceInfo) UnmarshalBinary(b []byte) error {
-	var res ResourceInfo
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
