# swagger/models/search_query.go
@@ -5,6 +5,99 @@ package models
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
 
+import (
+	"encoding/json"
+
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
 // SearchQuery search query
 // swagger:model searchQuery
-type SearchQuery interface{}
+type SearchQuery struct {
+
+	// path
+	Path string `json:"path,omitempty"`
+
+	// type
+	// Enum: [children metadata]
+	Type string `json:"type,omitempty"`
+}
+
+// Validate validates this search query
+func (m *SearchQuery) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateType(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+var searchQueryTypeTypePropEnum []interface{}
+
+func init() {
+	var res []string
+	if err := json.Unmarshal([]byte(`["children","metadata"]`), &res); err != nil {
+		panic(err)
+	}
+	for _, v := range res {
+		searchQueryTypeTypePropEnum = append(searchQueryTypeTypePropEnum, v)
+	}
+}
+
+const (
+
+	// SearchQueryTypeChildren captures enum value "children"
+	SearchQueryTypeChildren string = "children"
+
+	// SearchQueryTypeMetadata captures enum value "metadata"
+	SearchQueryTypeMetadata string = "metadata"
+)
+
+// prop value enum
+func (m *SearchQuery) validateTypeEnum(path, location string, value string) error {
+	if err := validate.Enum(path, location, value, searchQueryTypeTypePropEnum); err != nil {
+		return err
+	}
+	return nil
+}
+
+func (m *SearchQuery) validateType(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Type) { // not required
+		return nil
+	}
+
+	// value enum
+	if err := m.validateTypeEnum("type", "body", m.Type); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *SearchQuery) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *SearchQuery) UnmarshalBinary(b []byte) error {
+	var res SearchQuery
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
